--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title><link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Cafézinho</h1>
+    </header>
+
+    <main>
+        <section>
+            <div class="card">
+                <img style="height: 300px;" src="https://images.pexels.com/photos/15278331/pexels-photo-15278331.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <div class="text-card">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, possimus!</p>
+                </div>
+            </div>            
+            <div class="card">
+                <img style="height: 300px;" src="https://images.pexels.com/photos/8335014/pexels-photo-8335014.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <div class="text-card">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, possimus!</p>
+                </div>
+            </div>            
+            <div class="card">
+                <img style="height: 300px;" src="https://images.pexels.com/photos/7741270/pexels-photo-7741270.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+                <div class="text-card">
+                    <h3>Lorem, ipsum dolor.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, possimus!</p>
+                </div>
+            </div>            
+        </Section>
+    </main>
+
+
+    <footer>cafezinho da manha</footer>
+
 </body>
 </html>
